--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,8 +18,51 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
+
+  cancel-previous:
+    name: Cancel Previous Runs
+    runs-on: ubuntu-latest
+    timeout-minutes: 3
+    steps:
+      - uses: styfle/cancel-workflow-action@0.11.0
+        with:
+          access_token: ${{ github.token }}
+  
+  push-tag:
+    name: Push tag
+    runs-on: ubuntu-latest
+    needs: [cancel-previous]
+    outputs:
+      new_version: ${{ steps.tag_version.outputs.new_version }}
+      changelog: ${{ steps.tag_version.outputs.changelog }}
+      tag: ${{ steps.tag_version.outputs.new_tag }}
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          release_branches: master
+          custom_release_rules: major:major:Major Changes,minor:minor:Minor Changes,chore:patch:Chores
+
+  release:
+    name: Release helm chart
+    runs-on: ubuntu-latest
+    needs: [push-tag]
+
+    steps:
+      - name: Create a GitHub release
+        uses: ncipollo/release-action@v1.12.0
+        with:
+          tag: ${{  needs.push-tag.outputs.tag  }}
+          name: Release ${{  needs.push-tag.outputs.tag  }}
+          body: ${{  needs.push-tag.outputs.changelog  }}
+
   build-and-push-image:
     runs-on: ubuntu-latest
+    needs: [push-tag]
     permissions:
       contents: read
       packages: write
@@ -48,3 +91,4 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          file: ./docker/Dockerfile
