--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,7 +48,7 @@ jobs:
           custom_release_rules: major:major:Major Changes,minor:minor:Minor Changes,chore:patch:Chores
 
   release:
-    name: Release helm chart
+    name: Create Github Release
     runs-on: ubuntu-latest
     needs: [push-tag]
 
@@ -61,6 +61,7 @@ jobs:
           body: ${{  needs.push-tag.outputs.changelog  }}
 
   build-and-push-image:
+    name: Build and push Docker image
     runs-on: ubuntu-latest
     needs: [push-tag]
     permissions:
@@ -70,6 +71,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
@@ -85,10 +92,11 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        uses: docker/build-push-action@v3
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ steps.meta.outputs.tags }},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest,${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{  needs.push-tag.outputs.tag  }}
           labels: ${{ steps.meta.outputs.labels }}
           file: ./docker/Dockerfile
