chore(cicd): add helm release workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,6 +12,10 @@ name: Create and publish a Docker image
 on:
   push:
     branches: ['master']
+    paths-ignore:
+      - helm/**
+      - docs/**
+      - README.md
 
 env:
   REGISTRY: ghcr.io
