--- a/.github/workflows/release-helm.yaml
+++ b/.github/workflows/release-helm.yaml
@@ -6,6 +6,7 @@ on:
       - master
     paths:
       - helm/Chart.yaml
+      - .github/workflows/release-helm.yaml
 
 jobs:
   cancel-previous:
@@ -39,7 +40,8 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           release_branches: master
-          custom_tag: helm-${{ steps.chart-version.outputs.CHART_VERSION }}
+          custom_tag: ${{ steps.chart-version.outputs.CHART_VERSION }}
+          tag_prefix: helm-v
           custom_release_rules: major:major:Major Changes,minor:minor:Minor Changes,chore:patch:Chores
 
   release:
