--- a/.github/workflows/release-helm.yaml
+++ b/.github/workflows/release-helm.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Get Chart Version
         id: chart-version
         run: |
-          echo "CHART_VERSION=$(grep "version:" Chart.yaml | awk '{print $2}')" >> $GITHUB_OUTPUT
+          echo "CHART_VERSION=$(grep "version:" helm/Chart.yaml | awk '{print $2}')" >> $GITHUB_OUTPUT
 
       - name: Bump version and push tag
         id: tag_version
