--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,7 @@ name: Create and publish a Docker image
 
 on:
   push:
-    branches: ['master']
+    branches: ['develop', 'master', 'release']
     paths-ignore:
       - helm/**
       - docs/**
@@ -49,8 +49,10 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          release_branches: master
+          release_branches: release
+          pre_release_branches: master,develop
           custom_release_rules: major:major:Major Changes,minor:minor:Minor Changes,chore:patch:Chores
+          dry_run: true
 
   release:
     name: Create Github Release
@@ -61,6 +63,8 @@ jobs:
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1.12.0
         with:
+          draft: true
+          prerelease: true
           tag: ${{  needs.push-tag.outputs.tag  }}
           name: Release ${{  needs.push-tag.outputs.tag  }}
           body: ${{  needs.push-tag.outputs.changelog  }}
@@ -100,7 +104,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          push: true
+          push: false
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest,${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{  needs.push-tag.outputs.tag  }}
           labels: ${{ steps.meta.outputs.labels }}
