--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -104,7 +104,7 @@ jobs:
   build-and-push-image:
     name: Build and push Docker image
     runs-on: ubuntu-latest
-    needs: [push-tag, configure]
+    needs: [tag-release, configure]
     permissions:
       contents: read
       packages: write
