--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,8 +24,9 @@ env:
 
 jobs:
 
+  # Configures env variables based on current branch
   configure:
-    name: Configure variables based on current branch
+    name: Configure variables
     runs-on: ubuntu-latest
     outputs:
       ENVIRONMENT: ${{ steps.configure.outputs.ENVIRONMENT }}
@@ -40,20 +41,20 @@ jobs:
         run: |
               echo "Running on branch ${{ github.ref }}"
               if [ "${{ github.ref }}" = "refs/heads/develop" ]; then
-                echo "ENVIRONMENT=dev" >> $GITHUB_ENV
-                echo "PRERELEASE=true" >> $GITHUB_ENV
-                echo "IMAGE_TAG=$(uuidgen)" >> $GITHUB_ENV
-                echo "TAG_DRY_RUN=true" >> $GITHUB_ENV
+                echo "ENVIRONMENT=dev" >> $GITHUB_OUTPUT
+                echo "PRERELEASE=true" >> $GITHUB_OUTPUT
+                echo "IMAGE_TAG=$(uuidgen)" >> $GITHUB_OUTPUT
+                echo "TAG_DRY_RUN=true" >> $GITHUB_OUTPUT
               elif [ "${{ github.ref }}" = "refs/heads/master" ]; then
-                echo "ENVIRONMENT=staging" >> $GITHUB_ENV
-                echo "PRERELEASE=true" >> $GITHUB_ENV
-                echo "IMAGE_TAG=staging" >> $GITHUB_ENV
-                echo "TAG_DRY_RUN=false" >> $GITHUB_ENV
+                echo "ENVIRONMENT=staging" >> $GITHUB_OUTPUT
+                echo "PRERELEASE=true" >> $GITHUB_OUTPUT
+                echo "IMAGE_TAG=staging" >> $GITHUB_OUTPUT
+                echo "TAG_DRY_RUN=false" >> $GITHUB_OUTPUT
               elif [ "${{ github.ref }}" = "refs/heads/release" ]; then
-                echo "ENVIRONMENT=prod" >> $GITHUB_ENV
-                echo "PRERELEASE=false" >> $GITHUB_ENV
-                echo "IMAGE_TAG=latest" >> $GITHUB_ENV
-                echo "TAG_DRY_RUN=false" >> $GITHUB_ENV
+                echo "ENVIRONMENT=prod" >> $GITHUB_OUTPUT
+                echo "PRERELEASE=false" >> $GITHUB_OUTPUT
+                echo "IMAGE_TAG=latest" >> $GITHUB_OUTPUT
+                echo "TAG_DRY_RUN=false" >> $GITHUB_OUTPUT
               else
                 echo "Branch not configured"
                 exit 1
