--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,7 +24,8 @@ env:
 
 jobs:
 
-  # Configures env variables based on current branch
+  # Configures env variables based on current branch. This could be also done be setting vars manually in Github UI or by creating separate .env files
+  # I decided to go this way since everything is in one place
   configure:
     name: Configure variables
     runs-on: ubuntu-latest
@@ -33,6 +34,7 @@ jobs:
       PRERELEASE: ${{ steps.configure.outputs.PRERELEASE }}
       IMAGE_TAG: ${{ steps.configure.outputs.IMAGE_TAG }}
       TAG_DRY_RUN: ${{ steps.configure.outputs.TAG_DRY_RUN }}
+      PUSH_DOCKER: ${{ steps.configure.outputs.PUSH_DOCKER }}
     steps:
       - uses: styfle/cancel-workflow-action@0.11.0
         with:
@@ -45,16 +47,19 @@ jobs:
                 echo "PRERELEASE=true" >> $GITHUB_OUTPUT
                 echo "IMAGE_TAG=$(uuidgen)" >> $GITHUB_OUTPUT
                 echo "TAG_DRY_RUN=true" >> $GITHUB_OUTPUT
+                echo "PUSH_DOCKER=true" >> $GITHUB_OUTPUT
               elif [ "${{ github.ref }}" = "refs/heads/master" ]; then
                 echo "ENVIRONMENT=staging" >> $GITHUB_OUTPUT
                 echo "PRERELEASE=true" >> $GITHUB_OUTPUT
                 echo "IMAGE_TAG=staging" >> $GITHUB_OUTPUT
                 echo "TAG_DRY_RUN=false" >> $GITHUB_OUTPUT
+                echo "PUSH_DOCKER=true" >> $GITHUB_OUTPUT
               elif [ "${{ github.ref }}" = "refs/heads/release" ]; then
                 echo "ENVIRONMENT=prod" >> $GITHUB_OUTPUT
                 echo "PRERELEASE=false" >> $GITHUB_OUTPUT
                 echo "IMAGE_TAG=latest" >> $GITHUB_OUTPUT
                 echo "TAG_DRY_RUN=false" >> $GITHUB_OUTPUT
+                echo "PUSH_DOCKER=true" >> $GITHUB_OUTPUT
               else
                 echo "Branch not configured"
                 exit 1
@@ -65,7 +70,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: [configure]
     outputs:
-      # new_version: ${{ steps.tag_version.outputs.new_version }}
       tag: ${{ steps.tag_version.outputs.new_tag }}
     steps:
       - uses: actions/checkout@v2
@@ -76,7 +80,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           release_branches: release
-          pre_release_branches: master,develop
+          pre_release_branches: master
           custom_release_rules: major:major:Major Changes,minor:minor:Minor Changes,chore:patch:Chores
           dry_run: ${{  needs.configure.outputs.TAG_DRY_RUN  }}
 
@@ -89,29 +93,22 @@ jobs:
           name: Release ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}
 
-  # release:
-  #   name: Create Github Release
-  #   runs-on: ubuntu-latest
-  #   needs: [push-tag]
-
-  #   steps:
-  #     - name: Create a GitHub release
-  #       uses: ncipollo/release-action@v1.12.0
-  #       with:
-  #         prerelease: true
-  #         tag: ${{  needs.push-tag.outputs.tag  }}
-  #         name: Release ${{  needs.push-tag.outputs.tag  }}
-  #         body: ${{  needs.push-tag.outputs.changelog  }}
-
   build-and-push-image:
     name: Build and push Docker image
     runs-on: ubuntu-latest
     needs: [tag-release, configure]
+    environment:
+      name: ${{ needs.configure.outputs.ENVIRONMENT }}
     permissions:
       contents: read
       packages: write
 
     steps:
+      # Sample step that checks what environment was set in configure job.
+      # Useful for debugging next steps as each environment could use different set of credentials eg. for deployments
+      - name: Check env
+        run: echo ${{ vars.HELLO }}   # variable set manually in Github environment settings
+
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -138,7 +135,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          push: false
+          push: ${{  needs.configure.outputs.PUSH_DOCKER  }}
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{  needs.configure.outputs.IMAGE_TAG  }},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{  needs.tag-release.outputs.tag  }}
           labels: ${{ steps.meta.outputs.labels }}
