--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -80,15 +80,15 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           release_branches: release
-          pre_release_branches: master,develop
+          pre_release_branches: master,develop    # these branches will produce pre-release tag (eg. v0.1.2-develop.0)
           custom_release_rules: major:major:Major Changes,minor:minor:Minor Changes,chore:patch:Chores
-          dry_run: ${{  needs.configure.outputs.TAG_DRY_RUN  }}
+          dry_run: ${{  needs.configure.outputs.TAG_DRY_RUN  }}   # pushes to develop won't trigger tagging
 
       - name: Create a GitHub release
         if: github.ref == 'refs/heads/master' && github.ref == 'refs/heads/release'
         uses: ncipollo/release-action@v1.12.0
         with:
-          prerelease: ${{  needs.configure.outputs.PRERELEASE  }}
+          prerelease: ${{  needs.configure.outputs.PRERELEASE  }}   # master branch will create a pre-release
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: Release ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}
