--- a/.github/workflows/pr-validation.yaml
+++ b/.github/workflows/pr-validation.yaml
@@ -5,6 +5,7 @@ name: Pull Request Validation
 
 on:
   pull_request:
+    types: [opened, synchronize]
     branches:
       - develop
       - master
@@ -20,12 +21,12 @@ jobs:
 
     - name: Validate PR
       run: |
-        if [ "$GITHUB_BASE_REF" = "develop" ] && [ "$GITHUB_HEAD_REF" = "master" ]; then
+        if [ "$GITHUB_HEAD_REF" = "develop" ] && [ "$GITHUB_BASE_REF" = "master" ]; then
           echo "PR from develop to master is allowed."
-        elif [ "$GITHUB_BASE_REF" = "master" ] && [ "$GITHUB_HEAD_REF" = "release" ]; then
+        elif [ "$GITHUB_HEAD_REF" = "master" ] && [ "$GITHUB_BASE_REF" = "release" ]; then
           echo "PR from master to release is allowed."
         else
-          echo "This PR is not allowed."
+          echo "Pull request from $GITHUB_HEAD_REF to $GITHUB_BASE_REF not allowed. Only pull requests from develop to master or from master to release are allowed."
           exit 1
         fi
   
