--- a/.github/workflows/test-workflow.yaml
+++ b/.github/workflows/test-workflow.yaml
@@ -13,4 +13,4 @@ jobs:
     steps:
     - name: Validate Workflow Files
       run: |
-        echo "Hello from ${{ github.ref }}"
+        echo "Hello World from ${{ github.ref }}"
