--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -34,6 +34,9 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            - name: "SHOULD_CRASH"
+              value: {{.Values.shouldCrash}}
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
